scrollbar fix

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,3 +1,6 @@
+html {
+    overflow-y: overlay;
+}
 .layout {
     background-color: #282c34;
     display: flex;
